test/cases/compile_errors/stage1/obj/unknown_length_pointer_to_opaque.zig
export const T = [*]opaque {};

// error
// backend=stage1
// target=native
//
// tmp.zig:1:21: error: unknown-length pointer to opaque
